# snippet_box

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
beam/tfidf/: environment.yml  tfidf.py  tfidf_metadata  tfidf_test.py
beam/trends/: bigquery_io.py  deploy.sh  environment_m1mac.yml  environment_x86.yml  kde.py  local_run.sh  main.py  pyproject.toml  schema_transform.py  setup.py  tfidf.py  trends_metadata
beam/trends/tests/: bigquery_io_test.py  kde_test.py  tfidf_test.py
beam/trends/trends/: bigquery_io.py  main.py  tfidf.py
browser/chrome-extension/: .gitignore  package-lock.json  package.json  tsconfig.json
browser/chrome-extension/public/: manifest.json  popup.html
browser/chrome-extension/scripts/: fix_vendorjs_utf.ps1
firebase/: .gitignore  firebase.json  firestore.indexes.json  firestore.rules
firebase/functions/: .eslintrc.js  .gitignore  index.js  package-lock.json  package.json  tsconfig.json
ios/Runner/: Info.plist
lib/: main.dart
lib/authentication/: sign_in_view.dart  sign_in_view_model.dart
lib/models/: feed.dart  sign_in_view_model.dart  strings.dart  user.dart
lib/services/: firebase_auth_service.dart
lib/widgets/: feed.dart  home_page.dart  item_editor.dart  item_list.dart  nav_drawer.dart  rss.dart  saved_page.dart  snippet_box.dart  up_down_vote_buttons.dart  user_page.dart  voted_list_page.dart
test/: feed_list_page_test.dart  feed_test.dart  up_down_vote_buttions_test.dart
vertex/kde/: config.yaml  create_custom_jobs.sh  local_run.sh  task.py  test.sh  test_task.py
web/: index.html
(+20 files in other folders)
