[tool.poetry]
name = "trends"
version = "0.1.0"
description = ""
authors = ["festa78 <nonamehorses78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
apache-beam = {extras = ["gcp"], version = "^2.37.0"}
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
